# Lactococcus-Lactis

./: .gitignore  CMakeLists.txt  CMakePresets.json
docs/: architecture.md
files/client/: client.config
files/server/: server.config
files/server/sql/: create_users_table.sql
lib/httplib/: LICENSE
lib/sqlite/: LICENSE
scripts/deploy/: generate_cert.ps1  generate_cert.sh
sql/: init.sql
src/client/: CLI.cpp  CLI.h  Client.cpp  Client.h  main.cpp
src/common/: JsonUtils.cpp  JsonUtils.h
src/common/http_util/: HttpToStruct.cpp  HttpToStruct.h  StructToHttp.cpp  StructToHttp.h
src/common/protocol/: Message.h  ProtocolConstants.h  RequestContext.h  RouteInfo.h
src/common/protocol/access/: AccessRequest.h  AccessResponse.h  ConfirmMessages.h  PasswordInput.h
src/common/protocol/password/: ApplyPassword.h
src/common/protocol/user/: README.md  RegisterUser.h
src/lib/: NOTICE.txt  httplib.h
src/lib/nlohmann/: LICENSE
src/server/: Main.cpp  README.md  main.cpp  server.config
src/server/app/: App.cpp  App.h
src/server/application/: ServerApplication.cpp  ServerApplication.h
src/server/auth/: Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
src/server/config/: ServerConfig.cpp  ServerConfig.h
src/server/database/: DatabaseManager.cpp  DatabaseManager.h  DatabaseStore.cpp  DatabaseStore.h
src/server/handle/: Handler.cpp  Handler.h
src/server/runtime/: Logger.cpp  Logger.h
src/server/transport/: Acceptor.cpp  Acceptor.h  HttpsTransportServer.cpp  HttpsTransportServer.h  README.md  SocketUtils.h  TransportTypes.h  Worker.cpp  Worker.h
src/server/transport/internal/parsing/: HttpRequestParser.cpp  HttpRequestParser.h
tests/database/: DatabasePlanTests.cpp
